bison.output
Terminals which are not used

   IMPORT


State 107 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | func_decl
    6     | ERROR

    7 tipo_espec: INT
    8           | VOID

    9 var_decl: tipo_espec identificador SEMI
   10         | tipo_espec identificador LBRACKET numero RBRACKET SEMI

   11 func_decl: tipo_espec identificador LPAREN params RPAREN comp_decl

   12 params: lista_params
   13       | VOID
   14       | /* empty */

   15 lista_params: lista_params COMMA param
   16             | param

   17 param: tipo_espec identificador
   18      | tipo_espec identificador LBRACKET RBRACKET

   19 comp_decl: LCBRACE local_decl lista_statement RCBRACE
   20          | LCBRACE local_decl RCBRACE
   21          | LCBRACE lista_statement RCBRACE
   22          | LCBRACE RCBRACE

   23 local_decl: local_decl var_decl
   24           | var_decl

   25 exp_decl: exp SEMI
   26         | SEMI

   27 select_decl: IF LPAREN exp RPAREN statement
   28            | IF LPAREN exp RPAREN statement ELSE statement

   29 iter_decl: WHILE LPAREN exp RPAREN statement

   30 ret_decl: RETURN SEMI
   31         | RETURN exp SEMI

   32 lista_statement: lista_statement statement
   33                | statement

   34 statement: exp_decl
   35          | comp_decl
   36          | select_decl
   37          | iter_decl
   38          | ret_decl

   39 var: identificador
   40    | identificador LBRACKET exp RBRACKET

   41 exp: var ASSIGN exp
   42    | simple_exp

   43 simple_exp: soma_exp relational soma_exp
   44           | soma_exp

   45 relational: LT
   46           | LET
   47           | GT
   48           | GET
   49           | EQ
   50           | DIFF

   51 soma_exp: soma_exp soma termo
   52         | termo

   53 soma: PLUS
   54     | MINUS

   55 termo: termo multi fator
   56      | fator

   57 multi: TIMES
   58      | OVER

   59 fator: LPAREN exp RPAREN
   60      | var
   61      | activation
   62      | numero
   63      | ERROR

   64 activation: identificador LPAREN arg_list RPAREN
   65           | identificador LPAREN RPAREN

   66 arg_list: arg_list COMMA exp
   67         | exp

   68 numero: NUM

   69 identificador: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ERROR (258) 6 63
IF (259) 27 28
ELSE (260) 28
WHILE (261) 29
RETURN (262) 30 31
IMPORT (263)
VOID (264) 8 13
INT (265) 7
ID (266) 69
NUM (267) 68
ASSIGN (268) 41
EQ (269) 49
DIFF (270) 50
LT (271) 45
LET (272) 46
GT (273) 47
GET (274) 48
PLUS (275) 53
MINUS (276) 54
TIMES (277) 57
OVER (278) 58
LPAREN (279) 11 27 28 29 59 64 65
RPAREN (280) 11 27 28 29 59 64 65
LBRACKET (281) 10 18 40
RBRACKET (282) 10 18 40
LCBRACE (283) 19 20 21 22
RCBRACE (284) 19 20 21 22
SEMI (285) 9 10 25 26 30 31
COMMA (286) 15 66


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
decl_list (34)
    on left: 2 3, on right: 1 2
decl (35)
    on left: 4 5 6, on right: 2 3
tipo_espec (36)
    on left: 7 8, on right: 9 10 11 17 18
var_decl (37)
    on left: 9 10, on right: 4 23 24
func_decl (38)
    on left: 11, on right: 5
params (39)
    on left: 12 13 14, on right: 11
lista_params (40)
    on left: 15 16, on right: 12 15
param (41)
    on left: 17 18, on right: 15 16
comp_decl (42)
    on left: 19 20 21 22, on right: 11 35
local_decl (43)
    on left: 23 24, on right: 19 20 23
exp_decl (44)
    on left: 25 26, on right: 34
select_decl (45)
    on left: 27 28, on right: 36
iter_decl (46)
    on left: 29, on right: 37
ret_decl (47)
    on left: 30 31, on right: 38
lista_statement (48)
    on left: 32 33, on right: 19 21 32
statement (49)
    on left: 34 35 36 37 38, on right: 27 28 29 32 33
var (50)
    on left: 39 40, on right: 41 60
exp (51)
    on left: 41 42, on right: 25 27 28 29 31 40 41 59 66 67
simple_exp (52)
    on left: 43 44, on right: 42
relational (53)
    on left: 45 46 47 48 49 50, on right: 43
soma_exp (54)
    on left: 51 52, on right: 43 44 51
soma (55)
    on left: 53 54, on right: 51
termo (56)
    on left: 55 56, on right: 51 52 55
multi (57)
    on left: 57 58, on right: 55
fator (58)
    on left: 59 60 61 62 63, on right: 55 56
activation (59)
    on left: 64 65, on right: 61
arg_list (60)
    on left: 66 67, on right: 64 66
numero (61)
    on left: 68, on right: 10 62
identificador (62)
    on left: 69, on right: 9 10 11 17 18 39 40 64 65


state 0

    0 $accept: . program $end

    ERROR  shift, and go to state 1
    VOID   shift, and go to state 2
    INT    shift, and go to state 3

    program     go to state 4
    decl_list   go to state 5
    decl        go to state 6
    tipo_espec  go to state 7
    var_decl    go to state 8
    func_decl   go to state 9


state 1

    6 decl: ERROR .

    $default  reduce using rule 6 (decl)


state 2

    8 tipo_espec: VOID .

    $default  reduce using rule 8 (tipo_espec)


state 3

    7 tipo_espec: INT .

    $default  reduce using rule 7 (tipo_espec)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 10


state 5

    1 program: decl_list .
    2 decl_list: decl_list . decl

    ERROR  shift, and go to state 1
    VOID   shift, and go to state 2
    INT    shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl        go to state 11
    tipo_espec  go to state 7
    var_decl    go to state 8
    func_decl   go to state 9


state 6

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


state 7

    9 var_decl: tipo_espec . identificador SEMI
   10         | tipo_espec . identificador LBRACKET numero RBRACKET SEMI
   11 func_decl: tipo_espec . identificador LPAREN params RPAREN comp_decl

    ID  shift, and go to state 12

    identificador  go to state 13


state 8

    4 decl: var_decl .

    $default  reduce using rule 4 (decl)


state 9

    5 decl: func_decl .

    $default  reduce using rule 5 (decl)


state 10

    0 $accept: program $end .

    $default  accept


state 11

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


state 12

   69 identificador: ID .

    $default  reduce using rule 69 (identificador)


state 13

    9 var_decl: tipo_espec identificador . SEMI
   10         | tipo_espec identificador . LBRACKET numero RBRACKET SEMI
   11 func_decl: tipo_espec identificador . LPAREN params RPAREN comp_decl

    LPAREN    shift, and go to state 14
    LBRACKET  shift, and go to state 15
    SEMI      shift, and go to state 16


state 14

   11 func_decl: tipo_espec identificador LPAREN . params RPAREN comp_decl

    VOID  shift, and go to state 17
    INT   shift, and go to state 3

    $default  reduce using rule 14 (params)

    tipo_espec    go to state 18
    params        go to state 19
    lista_params  go to state 20
    param         go to state 21


state 15

   10 var_decl: tipo_espec identificador LBRACKET . numero RBRACKET SEMI

    NUM  shift, and go to state 22

    numero  go to state 23


state 16

    9 var_decl: tipo_espec identificador SEMI .

    $default  reduce using rule 9 (var_decl)


state 17

    8 tipo_espec: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 8 (tipo_espec)


state 18

   17 param: tipo_espec . identificador
   18      | tipo_espec . identificador LBRACKET RBRACKET

    ID  shift, and go to state 12

    identificador  go to state 24


state 19

   11 func_decl: tipo_espec identificador LPAREN params . RPAREN comp_decl

    RPAREN  shift, and go to state 25


state 20

   12 params: lista_params .
   15 lista_params: lista_params . COMMA param

    COMMA  shift, and go to state 26

    $default  reduce using rule 12 (params)


state 21

   16 lista_params: param .

    $default  reduce using rule 16 (lista_params)


state 22

   68 numero: NUM .

    $default  reduce using rule 68 (numero)


state 23

   10 var_decl: tipo_espec identificador LBRACKET numero . RBRACKET SEMI

    RBRACKET  shift, and go to state 27


state 24

   17 param: tipo_espec identificador .
   18      | tipo_espec identificador . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 28

    $default  reduce using rule 17 (param)


state 25

   11 func_decl: tipo_espec identificador LPAREN params RPAREN . comp_decl

    LCBRACE  shift, and go to state 29

    comp_decl  go to state 30


state 26

   15 lista_params: lista_params COMMA . param

    VOID  shift, and go to state 2
    INT   shift, and go to state 3

    tipo_espec  go to state 18
    param       go to state 31


state 27

   10 var_decl: tipo_espec identificador LBRACKET numero RBRACKET . SEMI

    SEMI  shift, and go to state 32


state 28

   18 param: tipo_espec identificador LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 33


state 29

   19 comp_decl: LCBRACE . local_decl lista_statement RCBRACE
   20          | LCBRACE . local_decl RCBRACE
   21          | LCBRACE . lista_statement RCBRACE
   22          | LCBRACE . RCBRACE

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    RCBRACE  shift, and go to state 39
    SEMI     shift, and go to state 40

    tipo_espec       go to state 41
    var_decl         go to state 42
    comp_decl        go to state 43
    local_decl       go to state 44
    exp_decl         go to state 45
    select_decl      go to state 46
    iter_decl        go to state 47
    ret_decl         go to state 48
    lista_statement  go to state 49
    statement        go to state 50
    var              go to state 51
    exp              go to state 52
    simple_exp       go to state 53
    soma_exp         go to state 54
    termo            go to state 55
    fator            go to state 56
    activation       go to state 57
    numero           go to state 58
    identificador    go to state 59


state 30

   11 func_decl: tipo_espec identificador LPAREN params RPAREN comp_decl .

    $default  reduce using rule 11 (func_decl)


state 31

   15 lista_params: lista_params COMMA param .

    $default  reduce using rule 15 (lista_params)


state 32

   10 var_decl: tipo_espec identificador LBRACKET numero RBRACKET SEMI .

    $default  reduce using rule 10 (var_decl)


state 33

   18 param: tipo_espec identificador LBRACKET RBRACKET .

    $default  reduce using rule 18 (param)


state 34

   63 fator: ERROR .

    $default  reduce using rule 63 (fator)


state 35

   27 select_decl: IF . LPAREN exp RPAREN statement
   28            | IF . LPAREN exp RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


state 36

   29 iter_decl: WHILE . LPAREN exp RPAREN statement

    LPAREN  shift, and go to state 61


state 37

   30 ret_decl: RETURN . SEMI
   31         | RETURN . exp SEMI

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38
    SEMI    shift, and go to state 62

    var            go to state 51
    exp            go to state 63
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 38

   59 fator: LPAREN . exp RPAREN

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 64
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 39

   22 comp_decl: LCBRACE RCBRACE .

    $default  reduce using rule 22 (comp_decl)


state 40

   26 exp_decl: SEMI .

    $default  reduce using rule 26 (exp_decl)


state 41

    9 var_decl: tipo_espec . identificador SEMI
   10         | tipo_espec . identificador LBRACKET numero RBRACKET SEMI

    ID  shift, and go to state 12

    identificador  go to state 65


state 42

   24 local_decl: var_decl .

    $default  reduce using rule 24 (local_decl)


state 43

   35 statement: comp_decl .

    $default  reduce using rule 35 (statement)


state 44

   19 comp_decl: LCBRACE local_decl . lista_statement RCBRACE
   20          | LCBRACE local_decl . RCBRACE
   23 local_decl: local_decl . var_decl

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    VOID     shift, and go to state 2
    INT      shift, and go to state 3
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    RCBRACE  shift, and go to state 66
    SEMI     shift, and go to state 40

    tipo_espec       go to state 41
    var_decl         go to state 67
    comp_decl        go to state 43
    exp_decl         go to state 45
    select_decl      go to state 46
    iter_decl        go to state 47
    ret_decl         go to state 48
    lista_statement  go to state 68
    statement        go to state 50
    var              go to state 51
    exp              go to state 52
    simple_exp       go to state 53
    soma_exp         go to state 54
    termo            go to state 55
    fator            go to state 56
    activation       go to state 57
    numero           go to state 58
    identificador    go to state 59


state 45

   34 statement: exp_decl .

    $default  reduce using rule 34 (statement)


state 46

   36 statement: select_decl .

    $default  reduce using rule 36 (statement)


state 47

   37 statement: iter_decl .

    $default  reduce using rule 37 (statement)


state 48

   38 statement: ret_decl .

    $default  reduce using rule 38 (statement)


state 49

   21 comp_decl: LCBRACE lista_statement . RCBRACE
   32 lista_statement: lista_statement . statement

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    RCBRACE  shift, and go to state 69
    SEMI     shift, and go to state 40

    comp_decl      go to state 43
    exp_decl       go to state 45
    select_decl    go to state 46
    iter_decl      go to state 47
    ret_decl       go to state 48
    statement      go to state 70
    var            go to state 51
    exp            go to state 52
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 50

   33 lista_statement: statement .

    $default  reduce using rule 33 (lista_statement)


state 51

   41 exp: var . ASSIGN exp
   60 fator: var .

    ASSIGN  shift, and go to state 71

    $default  reduce using rule 60 (fator)


state 52

   25 exp_decl: exp . SEMI

    SEMI  shift, and go to state 72


state 53

   42 exp: simple_exp .

    $default  reduce using rule 42 (exp)


state 54

   43 simple_exp: soma_exp . relational soma_exp
   44           | soma_exp .
   51 soma_exp: soma_exp . soma termo

    EQ     shift, and go to state 73
    DIFF   shift, and go to state 74
    LT     shift, and go to state 75
    LET    shift, and go to state 76
    GT     shift, and go to state 77
    GET    shift, and go to state 78
    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 44 (simple_exp)

    relational  go to state 81
    soma        go to state 82


state 55

   52 soma_exp: termo .
   55 termo: termo . multi fator

    TIMES  shift, and go to state 83
    OVER   shift, and go to state 84

    $default  reduce using rule 52 (soma_exp)

    multi  go to state 85


state 56

   56 termo: fator .

    $default  reduce using rule 56 (termo)


state 57

   61 fator: activation .

    $default  reduce using rule 61 (fator)


state 58

   62 fator: numero .

    $default  reduce using rule 62 (fator)


state 59

   39 var: identificador .
   40    | identificador . LBRACKET exp RBRACKET
   64 activation: identificador . LPAREN arg_list RPAREN
   65           | identificador . LPAREN RPAREN

    LPAREN    shift, and go to state 86
    LBRACKET  shift, and go to state 87

    $default  reduce using rule 39 (var)


state 60

   27 select_decl: IF LPAREN . exp RPAREN statement
   28            | IF LPAREN . exp RPAREN statement ELSE statement

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 88
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 61

   29 iter_decl: WHILE LPAREN . exp RPAREN statement

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 89
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 62

   30 ret_decl: RETURN SEMI .

    $default  reduce using rule 30 (ret_decl)


state 63

   31 ret_decl: RETURN exp . SEMI

    SEMI  shift, and go to state 90


state 64

   59 fator: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 91


state 65

    9 var_decl: tipo_espec identificador . SEMI
   10         | tipo_espec identificador . LBRACKET numero RBRACKET SEMI

    LBRACKET  shift, and go to state 15
    SEMI      shift, and go to state 16


state 66

   20 comp_decl: LCBRACE local_decl RCBRACE .

    $default  reduce using rule 20 (comp_decl)


state 67

   23 local_decl: local_decl var_decl .

    $default  reduce using rule 23 (local_decl)


state 68

   19 comp_decl: LCBRACE local_decl lista_statement . RCBRACE
   32 lista_statement: lista_statement . statement

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    RCBRACE  shift, and go to state 92
    SEMI     shift, and go to state 40

    comp_decl      go to state 43
    exp_decl       go to state 45
    select_decl    go to state 46
    iter_decl      go to state 47
    ret_decl       go to state 48
    statement      go to state 70
    var            go to state 51
    exp            go to state 52
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 69

   21 comp_decl: LCBRACE lista_statement RCBRACE .

    $default  reduce using rule 21 (comp_decl)


state 70

   32 lista_statement: lista_statement statement .

    $default  reduce using rule 32 (lista_statement)


state 71

   41 exp: var ASSIGN . exp

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 93
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 72

   25 exp_decl: exp SEMI .

    $default  reduce using rule 25 (exp_decl)


state 73

   49 relational: EQ .

    $default  reduce using rule 49 (relational)


state 74

   50 relational: DIFF .

    $default  reduce using rule 50 (relational)


state 75

   45 relational: LT .

    $default  reduce using rule 45 (relational)


state 76

   46 relational: LET .

    $default  reduce using rule 46 (relational)


state 77

   47 relational: GT .

    $default  reduce using rule 47 (relational)


state 78

   48 relational: GET .

    $default  reduce using rule 48 (relational)


state 79

   53 soma: PLUS .

    $default  reduce using rule 53 (soma)


state 80

   54 soma: MINUS .

    $default  reduce using rule 54 (soma)


state 81

   43 simple_exp: soma_exp relational . soma_exp

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 94
    soma_exp       go to state 95
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 82

   51 soma_exp: soma_exp soma . termo

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 94
    termo          go to state 96
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 83

   57 multi: TIMES .

    $default  reduce using rule 57 (multi)


state 84

   58 multi: OVER .

    $default  reduce using rule 58 (multi)


state 85

   55 termo: termo multi . fator

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 94
    fator          go to state 97
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 86

   64 activation: identificador LPAREN . arg_list RPAREN
   65           | identificador LPAREN . RPAREN

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38
    RPAREN  shift, and go to state 98

    var            go to state 51
    exp            go to state 99
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    arg_list       go to state 100
    numero         go to state 58
    identificador  go to state 59


state 87

   40 var: identificador LBRACKET . exp RBRACKET

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 101
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 88

   27 select_decl: IF LPAREN exp . RPAREN statement
   28            | IF LPAREN exp . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


state 89

   29 iter_decl: WHILE LPAREN exp . RPAREN statement

    RPAREN  shift, and go to state 103


state 90

   31 ret_decl: RETURN exp SEMI .

    $default  reduce using rule 31 (ret_decl)


state 91

   59 fator: LPAREN exp RPAREN .

    $default  reduce using rule 59 (fator)


state 92

   19 comp_decl: LCBRACE local_decl lista_statement RCBRACE .

    $default  reduce using rule 19 (comp_decl)


state 93

   41 exp: var ASSIGN exp .

    $default  reduce using rule 41 (exp)


state 94

   60 fator: var .

    $default  reduce using rule 60 (fator)


state 95

   43 simple_exp: soma_exp relational soma_exp .
   51 soma_exp: soma_exp . soma termo

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 43 (simple_exp)

    soma  go to state 82


state 96

   51 soma_exp: soma_exp soma termo .
   55 termo: termo . multi fator

    TIMES  shift, and go to state 83
    OVER   shift, and go to state 84

    $default  reduce using rule 51 (soma_exp)

    multi  go to state 85


state 97

   55 termo: termo multi fator .

    $default  reduce using rule 55 (termo)


state 98

   65 activation: identificador LPAREN RPAREN .

    $default  reduce using rule 65 (activation)


state 99

   67 arg_list: exp .

    $default  reduce using rule 67 (arg_list)


state 100

   64 activation: identificador LPAREN arg_list . RPAREN
   66 arg_list: arg_list . COMMA exp

    RPAREN  shift, and go to state 104
    COMMA   shift, and go to state 105


state 101

   40 var: identificador LBRACKET exp . RBRACKET

    RBRACKET  shift, and go to state 106


state 102

   27 select_decl: IF LPAREN exp RPAREN . statement
   28            | IF LPAREN exp RPAREN . statement ELSE statement

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    SEMI     shift, and go to state 40

    comp_decl      go to state 43
    exp_decl       go to state 45
    select_decl    go to state 46
    iter_decl      go to state 47
    ret_decl       go to state 48
    statement      go to state 107
    var            go to state 51
    exp            go to state 52
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 103

   29 iter_decl: WHILE LPAREN exp RPAREN . statement

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    SEMI     shift, and go to state 40

    comp_decl      go to state 43
    exp_decl       go to state 45
    select_decl    go to state 46
    iter_decl      go to state 47
    ret_decl       go to state 48
    statement      go to state 108
    var            go to state 51
    exp            go to state 52
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 104

   64 activation: identificador LPAREN arg_list RPAREN .

    $default  reduce using rule 64 (activation)


state 105

   66 arg_list: arg_list COMMA . exp

    ERROR   shift, and go to state 34
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 38

    var            go to state 51
    exp            go to state 109
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 106

   40 var: identificador LBRACKET exp RBRACKET .

    $default  reduce using rule 40 (var)


state 107

   27 select_decl: IF LPAREN exp RPAREN statement .
   28            | IF LPAREN exp RPAREN statement . ELSE statement

    ELSE  shift, and go to state 110

    ELSE      [reduce using rule 27 (select_decl)]
    $default  reduce using rule 27 (select_decl)


state 108

   29 iter_decl: WHILE LPAREN exp RPAREN statement .

    $default  reduce using rule 29 (iter_decl)


state 109

   66 arg_list: arg_list COMMA exp .

    $default  reduce using rule 66 (arg_list)


state 110

   28 select_decl: IF LPAREN exp RPAREN statement ELSE . statement

    ERROR    shift, and go to state 34
    IF       shift, and go to state 35
    WHILE    shift, and go to state 36
    RETURN   shift, and go to state 37
    ID       shift, and go to state 12
    NUM      shift, and go to state 22
    LPAREN   shift, and go to state 38
    LCBRACE  shift, and go to state 29
    SEMI     shift, and go to state 40

    comp_decl      go to state 43
    exp_decl       go to state 45
    select_decl    go to state 46
    iter_decl      go to state 47
    ret_decl       go to state 48
    statement      go to state 111
    var            go to state 51
    exp            go to state 52
    simple_exp     go to state 53
    soma_exp       go to state 54
    termo          go to state 55
    fator          go to state 56
    activation     go to state 57
    numero         go to state 58
    identificador  go to state 59


state 111

   28 select_decl: IF LPAREN exp RPAREN statement ELSE statement .

    $default  reduce using rule 28 (select_decl)
